--- a/.travis.yml
+++ b/.travis.yml
@@ -14,16 +14,16 @@ jobs:
         - curl -fsSLO https://raw.githubusercontent.com/GiovanniBussi/macports-ci/master/macports-ci
         - source ./macports-ci install
         - source macports-ci ccache
-        - sudo port install -N autoconf
-        - sudo port install -N ccache
-        - sudo port install -N coreutils
-        - sudo port install -N dash
-        - sudo port install -N git
-        - sudo port install -N gsed
-        - sudo port install -N lua51
-        - sudo port install -N luajit
-        - sudo port install -N python27
-        - sudo port install -N python38
+        - yes | sudo port install -N autoconf
+        - yes | sudo port install -N ccache
+        - yes | sudo port install -N coreutils
+        - yes | sudo port install -N dash
+        - yes | sudo port install -N git
+        - yes | sudo port install -N gsed
+        - yes | sudo port install -N lua51
+        - yes | sudo port install -N luajit
+        - yes | sudo port install -N python27
+        - yes | sudo port install -N python38
         - source macports-ci ccache --save
       cache:
         directories:
@@ -35,16 +35,16 @@ jobs:
         - curl -fsSLO https://raw.githubusercontent.com/GiovanniBussi/macports-ci/master/macports-ci
         - source ./macports-ci install
         - source macports-ci ccache
-        - sudo port install -N autoconf
-        - sudo port install -N ccache
-        - sudo port install -N coreutils
-        - sudo port install -N dash
-        - sudo port install -N git
-        - sudo port install -N gsed
-        - sudo port install -N lua51
-        - sudo port install -N luajit
-        - sudo port install -N python27
-        - sudo port install -N python38
+        - yes | sudo port install -N autoconf
+        - yes | sudo port install -N ccache
+        - yes | sudo port install -N coreutils
+        - yes | sudo port install -N dash
+        - yes | sudo port install -N git
+        - yes | sudo port install -N gsed
+        - yes | sudo port install -N lua51
+        - yes | sudo port install -N luajit
+        - yes | sudo port install -N python27
+        - yes | sudo port install -N python38
         - source macports-ci ccache --save
       cache:
         directories:
