--- a/.travis.yml
+++ b/.travis.yml
@@ -37,6 +37,11 @@ env:
     - version=$(sw_vers -productVersion)
 
 before_script:
+  - export -f travis_nanoseconds
+  - export -f travis_fold
+  - export -f travis_time_start
+  - export -f travis_time_finish
+  - sw_vers
   - export options=()
   - options+=(--enable-fail-if-missing)
   - options+=(--disable-smack)
@@ -74,8 +79,11 @@ script:
   - gsed -i.bak -r -e 's|\<readlink\>|greadlink|g' ./guilt/guilt
   - make -C ./guilt PREFIX=/usr/local install
   - curl -fsSLO https://ftp.gnu.org/pub/gnu/gettext/gettext-0.20.1.tar.xz
+  - travis_fold start 'tar.gettext' && travis_time_start
   - tar fvx ./gettext-*.tar.xz
+  - travis_time_finish && travis_fold end 'tar.gettext'
   - rm ./gettext-*.tar.xz
+  - travis_fold start 'configure.gettext' && travis_time_start
   - >
       cd ./gettext-* &&
       ./configure
@@ -90,8 +98,12 @@ script:
       --without-bzip2
       --without-xz &&
       cd -
+  - travis_fold start 'make.gettext' && travis_time_start
   - make -C ./gettext-* -j $(getconf _NPROCESSORS_ONLN)
+  - travis_time_finish && travis_fold end 'make.gettext'
+  - travis_fold start 'make.install.gettext' && travis_time_start
   - make -C ./gettext-* install
+  - travis_time_finish && travis_fold end 'make.install.gettext'
   - rm -rf "${gettext}/share/doc"
   - >
       cd ./vim-kaoriya/vim &&
@@ -108,6 +120,7 @@ script:
       guilt push --all &&
       cd -
   - make -C ./vim-kaoriya/vim/src autoconf
+  - travis_fold start 'build.vim' && travis_time_start
   - >
       export LUA_PREFIX="$(brew --prefix)" &&
       export CFLAGS="-I${gettext}/include" &&
@@ -117,6 +130,7 @@ script:
       make -j $(getconf _NPROCESSORS_ONLN) DATADIR=${datadir} &&
       make install &&
       cd -
+  - travis_time_finish && travis_fold end 'build.vim'
   - gsed -i.bak -r -e "s|\<root\>|$(whoami)|g" ./vim-kaoriya/build/freebsd/Makefile
   - make -C ./vim-kaoriya/build/freebsd VIM_DIR="${prefix}/share/vim" kaoriya-install
   - >
