--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,7 @@ jobs:
       DEBIAN_FRONTEND: noninteractive
     steps:
       - uses: actions/checkout@v2
+      - run: sudo apt update --yes
       - run: sudo apt install --yes libncurses
       - run: docker-compose build ubuntu
       - run: docker-compose run --detach --rm ubuntu tail -f /dev/null
